dataset1235/2025-2/1153765216/users/1937138466/executions/2747719322_3691284457.log
== SUBMISSION (2025-08-19 03:22:48)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4 

media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))

print(round(media, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:24:15)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4 

media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4*peso4))

print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 79.36
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 82.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 70.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 67.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 300.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 78.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:25:19)
-- CODE: 
nota1 = float(input("Informe o valor de uma nota: "))
nota2 = float(input("Informe o valor de uma nota: "))
nota3 = float(input("Informe o valor de uma nota: "))
nota4 = float(input("Informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4 

media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4*peso4))

print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: 79.36
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: 82.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: 70.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: 67.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: 300.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: 78.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:23:53)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4 

media = (nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4*peso4)

print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 79.36
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 82.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 70.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 67.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 300.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 78.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:24:14)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4 

media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4*peso4))

print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 79.36
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 82.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 70.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 67.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 300.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 78.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:22:39)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4 

media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))

print(round(media, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:23:07)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4 

media = (nota1*peso1) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4)

print(round(media, 2))

-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 79.36
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 82.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 70.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 67.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 300.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 78.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:24:16)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4 

media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4*peso4))

print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 79.36
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 82.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 70.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 67.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 300.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 78.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:23:09)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4 

media = (nota1*peso1) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4)

print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 79.36
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 82.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 70.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 67.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 300.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 78.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:23:10)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4 

media = (nota1*peso1) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4)

print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 79.36
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 82.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 70.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 67.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 300.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 78.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:24:05)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4 

media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4*peso4))

print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 79.36
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 82.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 70.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 67.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 300.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 78.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:22:53)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4 

media = ((nota1*peso1) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))

print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 79.36
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 82.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 70.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 67.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 300.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 78.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:22:48)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4 

media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))

print(round(media, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:22:47)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4 

media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))

print(round(media, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 11
    media = ((nota1*peso1)) + (nota2*peso2) + (nota3*peso3) + (nota4*peso4))
                                                                           ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:26:11)
-- CODE: 
nota1 = float(input("Informe o valor de uma nota: "))
nota2 = float(input("Informe o valor de uma nota: "))
nota3 = float(input("Informe o valor de uma nota: "))
nota4 = float(input("Informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4 

media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4*peso4)) / 10

print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: 7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: 8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: 7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: 6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: 30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: Informe o valor de uma nota: 7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:24:15)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4 

media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4*peso4))

print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 79.36
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 82.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 70.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 67.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 300.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 78.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
